force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <label>Leave Balance</label>
    <nameField>
        <displayFormat>EN-{00000}</displayFormat>
        <label>Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves Balance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>