force-app/main/default/objects/Leave_Balance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leaves_Balance</relationshipName>
    <type>Lookup</type>
</CustomField>