force-app/main/default/objects/Leave_Balance__c/fields/Pending_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Pending_Leaves__c</fullName>
    <label>Pending Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>