force-app/main/default/objects/Leave_Balance__c/fields/Total_Allocated_Leaves__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocated_Leaves__c</fullName>
    <label>Total Allocated Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>